# lease-announcement

./: .env.example  .gitignore  .mcp.json  cli.py  pyproject.toml
.claude/memory/: last-session.json
.github/workflows/: collect-news.yml
app/: __init__.py  classify_pages.py  commercial.py  entity_resolution.py  geocode.py  group_buildings.py  image_extractor.py  ingest.py  merge.py  news_fetch.py  news_keywords.py  news_scraper.py  normalize.py  pipeline.py  schemas.py  subway.py  supa_store.py
app/adapters/: __init__.py  base.py  cnw.py  oscar.py  s1.py
app/enrich/: __init__.py  base.py  building_register.py
docs/: SCHEMA.md
docs/_html/: SCHEMA.html  index.html
docs/plans/: 2026-06-18-lease-web-platform.md
scripts/: backfill_ldong.py  check_ppltn.py  check_sdsc2.py  collect_news.sh  geocode_out.py  load_nps.py
supabase/migrations/: 0001_extensions_enums.sql  0002_brokers.sql  0003_source_documents.sql  0004_raw_extractions.sql  0005_buildings.sql  0006_building_field_values.sql  0007_listing_snapshots.sql  0008_floor_availabilities.sql  0009_rent_terms.sql  0010_building_images.sql  0011_merge_candidates_review_queue.sql  0012_views.sql  0019_buildings_enrich_columns.sql  0020_public_read_rls.sql  0021_web_views.sql  0022_rent_trend_view.sql  0023_buildings_visibility.sql  0024_commercial_areas.sql  0025_news.sql  0026_news_subcategory.sql  0027_news_ttl_pgcron.sql
tests/: check_rent_anomalies.py  test_address_spacing.py  test_geocode.py  test_supa_store_integration.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+45 files in other folders)
